keycloak/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app.kubernetes.io/name: keycloak
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: keycloak
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keycloak
    spec:
      containers:
      - image: quay.io/keycloak/keycloak:21.0.1
        args: ["start-dev", "--log-level=DEBUG"]
        name: keycloak
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /aai/realms/master
            port: 8080
      restartPolicy: Always
